--- a/neel.html
+++ b/neel.html
@@ -1,4 +1,4 @@
-#f8d043<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <meta charset="UTF-8">
 <head>
     <style>
