--- a/neel.html
+++ b/neel.html
@@ -24,7 +24,7 @@
 <body>
 
 <audio autoplay loop id="audio">
-    <source src="audio/happy-birthday.mp3" type="audio/mpeg">
+    <source src="audio/happy-birthday.mp3"  type="audio/mp3">
     Your browser does not support the audio element.
   </audio>
   <script>
