--- a/sound/index.html
+++ b/sound/index.html
@@ -1,66 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" >
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<title>p5sound</title>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/4.13.0/bodymovin.js"></script>
-	<script src="libraries/lottie.js" type="text/javascript"></script>
-	<script src="libraries/p5.js"></script>
-	<script src="libraries/p5.dom.js"></script>
-	<script src="libraries/p5.sound.js"></script>
-
-	<style type="text/css">
-		body {
-			margin: 0;
-		}
-		canvas {
-			margin-bottom: -5px;
-		}
-		#main {
-			width: 100%;
-			height: 100vh;
-			background: #000;
-		}
-    /* make the video stretch to fill the screen in WebKit */
-    :-webkit-full-screen #main {
-      width: 100%;
-      height: 100%;
-
-    }
-  </style>
+  <meta charset="UTF-8">
+  <title>CodePen - CSS Little Flowers 🌺</title>
+  <link rel='stylesheet' href='https://codepen.io/udyux/pen/jWMbjG.css'><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
-	<div id="main"></div>
+<!-- partial:index.partial.html -->
+<div class="box">
+  <div class="plant-box"></div>
+  
+  <div class="flower -flower1">
+    <div class="plant"></div>
+  </div>
+  
+  <div class="flower -flower2">
+    <div class="plant"></div>
+  </div>
+  
+  <div class="flower -flower3">
+    <div class="plant"></div>
+  </div>
+</div>
 
-	<script>
-	  var videoElement = document.getElementById("main");
 
-	  function toggleFullScreen() {
-	    if (!document.mozFullScreen && !document.webkitFullScreen) {
-	      if (videoElement.mozRequestFullScreen) {
-	        videoElement.mozRequestFullScreen();
-	      } else {
-	        videoElement.webkitRequestFullScreen(Element.ALLOW_KEYBOARD_INPUT);
-	      }
-	    } else {
-	      if (document.mozCancelFullScreen) {
-	        document.mozCancelFullScreen();
-	      } else {
-	        document.webkitCancelFullScreen();
-	      }
-	    }
-	  }
+<audio autoplay muted id="audio_1" src="https://wittywit.github.io/assets/500-milliseconds-of-silence.mp3"></audio>
 
-	  document.addEventListener("keydown", function(e) {
-	    if (e.keyCode == 13) {
-	      toggleFullScreen();
-	    }
-	  }, false);
-	</script>
-	<script src="sketch.js"></script>
+<audio loop id="audio_2" src="https://tympanus.net/Development/AboveBeneath/sounds/quietlake070808.mp3"></audio>
+<!-- partial -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./script.js"></script>
+
 </body>
 </html>
