--- a/shu/index.html
+++ b/shu/index.html
@@ -23,7 +23,7 @@
 
 <meta name="msapplication-TileColor" content="#030512">
 <meta name="theme-color" content="#030512">
-<link rel="stylesheet" href="./files/styles.css">
+<link rel="stylesheet" href="./styles.css">
 
 	
 	
