--- a/shu/index.html
+++ b/shu/index.html
@@ -95,7 +95,7 @@
 <div>
 <p>
 	
-	<p> Something sexy as artist statement to provoke you comes here. Switch off that phone and reduce your consumption.<br>
+	<p> Still writing something as artist statement to provoke you. Switch off that phone and reduce your consumption in the mean time.<br>
 Shake your phone to open a memory of the Planet Earth. </p>
 	
 	</p>
