--- a/shu/index.html
+++ b/shu/index.html
@@ -67,7 +67,7 @@
 </h1>
 </div>
 	
-<a aria-label="Go down" class="top-hero__button" href="http://thebigblue.in/#" id="down-arrow">
+<a aria-label="Go down" class="top-hero__button" href="#" id="down-arrow">
 <svg width="17" height="10" viewBox="0 0 17 10" fill="none" xmlns="http://www.w3.org/2000/svg">
 <line x1="0.353553" y1="0.646447" x2="8.85354" y2="9.14644" stroke="white"></line>
 <line x1="8.14646" y1="9.14645" x2="16.6464" y2="0.646456" stroke="white"></line>
