--- a/Web-pics/index.html
+++ b/Web-pics/index.html
@@ -19,11 +19,19 @@
             width: 640px;
             height: 480px;
         }
+        button {
+            margin: 5px;
+        }
     </style>
 </head>
 <body>
     <video id="video" autoplay></video>
     <canvas id="canvas"></canvas>
+    <div>
+        <button onclick="changeBackground('background1.jpg')">Background 1</button>
+        <button onclick="changeBackground('background2.jpg')">Background 2</button>
+        <button onclick="changeBackground('background3.jpg')">Background 3</button>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/selfie_segmentation"></script>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils"></script>
 
@@ -31,6 +39,9 @@
         const video = document.getElementById('video');
         const canvas = document.getElementById('canvas');
         const ctx = canvas.getContext('2d');
+
+        let currentBackground = new Image();
+        currentBackground.src = 'background1.jpg'; // Default background
 
         const selfieSegmentation = new SelfieSegmentation({locateFile: (file) => {
             return `https://cdn.jsdelivr.net/npm/@mediapipe/selfie_segmentation/${file}`;
@@ -50,7 +61,7 @@
             ctx.clearRect(0, 0, canvas.width, canvas.height);
 
             // Draw background first
-            ctx.drawImage(backgroundImage, 0, 0, canvas.width, canvas.height);
+            ctx.drawImage(currentBackground, 0, 0, canvas.width, canvas.height);
 
             // Draw only the segmented person
             ctx.globalCompositeOperation = 'source-in';
@@ -60,6 +71,10 @@
             ctx.restore();
         }
 
+        function changeBackground(imageSrc) {
+            currentBackground.src = imageSrc;
+        }
+
         const camera = new Camera(video, {
             onFrame: async () => {
                 await selfieSegmentation.send({image: video});
@@ -67,9 +82,6 @@
             width: 640,
             height: 480
         });
-
-        const backgroundImage = new Image();
-        backgroundImage.src = 'background1.jpg';
 
         camera.start();
     </script>
