--- a/test _poetics/index.html
+++ b/test _poetics/index.html
@@ -37,27 +37,27 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
             <div class="poem-list">
                 <div class="poem-item"><a>
                     <span class="poem-number">.01</span>
-                    <span class="poem-title">UX Consultancy</span>
+                    <span class="poem-title">uxConsultancy</span>
                     <span class="arrow">→</span></a>
                 </div>
                 <div class="poem-item"><a>
                     <span class="poem-number">.02</span>
-                    <span class="poem-title">Games and Interactions</span>
+                    <span class="poem-title">games and interactions</span>
                     <span class="arrow">→</span></a>
                 </div>
                 <div class="poem-item"><a>
                     <span class="poem-number">.03</span>
-                    <span class="poem-title">Poetics of Ordinary</span>
+                    <span class="poem-title">poetics of ordinary</span>
                     <span class="arrow">→</span></a>
                 </div>
                 <div class="poem-item"><a>
                     <span class="poem-number">.04</span>
-                    <span class="poem-title">Research lab</span>
+                    <span class="poem-title">research lab</span>
                     <span class="arrow">→</span></a>
                 </div>
                 <div class="poem-item"><a>
                     <span class="poem-number">.05</span>
-                    <span class="poem-title">Contact</span>
+                    <span class="poem-title">contact us</span>
                     <span class="arrow">→</span></a>
                 </div>
             </div>
