--- a/test _poetics/index.html
+++ b/test _poetics/index.html
@@ -64,6 +64,45 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
         </main>
     </div>
 
+<!--***************************FOOTER**************************************-->
+		<footer style="background-color: #F8F5F2; padding: 40px 0; text-align: center; color: #4A4A4A; font-family: 'freight-display-pro', serif; font-size: 22px; font-weight: 600;">
+  <div style="max-width: 1200px; margin: auto; display: flex; justify-content: space-between; flex-wrap: wrap;">
+    
+    <div style="flex: 1 1 30%; margin: 20px 0;">
+      <h3 style="margin-bottom: 15px; font-size: 22px; font-weight: 700;">About Us</h3>
+      <p style="font-weight: 500;">Studio Poetics explores the beauty in the ordinary through design, UX consultancy, and game development.</p>
+    </div>
+
+    <div style="flex: 1 1 30%; margin: 20px 0;">
+      <h3 style="margin-bottom: 15px; font-size: 22px; font-weight: 700;">Studio</h3>
+      <ul style="list-style: none; padding: 0; font-weight: 500;">
+        <li><a href="#" style="color: #D4A017; text-decoration: none;">Home</a></li>
+        <li><a href="#" style="color: #D4A017; text-decoration: none;">Games</a></li>
+        <li><a href="#" style="color: #D4A017; text-decoration: none;">Research</a></li>
+        <li><a href="#" style="color: #D4A017; text-decoration: none;">Contact Us</a></li>
+        <li><a href="#" style="color: #D4A017; text-decoration: none;">Ux Consultancy</a></li>
+      </ul>
+    </div>
+
+    <div style="flex: 1 1 30%; margin: 20px 0;">
+      <h3 style="margin-bottom: 15px; font-size: 22px; font-weight: 700;">Contact</h3>
+      <p style="font-weight: 500;">Email: <a href="mailto:contact@studiopoetics.com" style="color: #D4A017; text-decoration: none;">contact@studiopoetics.com</a></p>
+      <div style="margin-top: 15px;">
+        <a href="#" style="margin: 0 30px; color: #D4A017; font-size: 56px; display: inline-block;"><i class="fab fa-linkedin-in"></i></a>
+        <a href="#" style="margin: 0 30px; color: #D4A017; font-size: 56px; display: inline-block;"><i class="fab fa-twitter"></i></a>
+        <a href="#" style="margin: 0 30px; color: #D4A017; font-size: 56px; display: inline-block;"><i class="fab fa-instagram"></i></a>
+      </div>
+    </div>
+  </div>
+
+  <div style="border-top: 1px solid #ddd; margin-top: 40px; padding-top: 20px; font-weight: 600;">
+    <p>&copy; 2024 Studio Poetics. All rights reserved. <a href="#" style="color: #D4A017; text-decoration: none;">Privacy Policy</a></p>
+  </div>
+</footer>
+
+
+<!--*************************** FOOTER * END **************************************-->		
+
 <svg width="0" height="0" xmlns="http://www.w3.org/2000/svg">
   <filter id="wave">
     <feTurbulence x="0" y="0" baseFrequency="0.009" numOctaves="5" seed="1">
