--- a/test _poetics/index.html
+++ b/test _poetics/index.html
@@ -10,6 +10,7 @@
 <link rel="shortcut icon" href="favicon.ico">
 <link rel="stylesheet" href="https://use.typekit.net/gdg8keg.css">
 <link rel="stylesheet" type="text/css" href="style3.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 		<script>document.documentElement.className = "js";
 var supportsCssVars = function supportsCssVars() {
