--- a/test_poetics/index.html
+++ b/test_poetics/index.html
@@ -77,21 +77,21 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
     <div style="flex: 1 1 30%; margin: 20px 0;">
       <h3 style="margin-bottom: 15px; font-size: 22px; font-weight: 700;">Studio</h3>
       <ul style="list-style: none; padding: 0; font-weight: 500;">
-        <li><a href="#" style="color: #D4A017; text-decoration: none;">Home</a></li>
-        <li><a href="#" style="color: #D4A017; text-decoration: none;">Games</a></li>
-        <li><a href="#" style="color: #D4A017; text-decoration: none;">Research</a></li>
-        <li><a href="#" style="color: #D4A017; text-decoration: none;">Contact Us</a></li>
-        <li><a href="#" style="color: #D4A017; text-decoration: none;">Ux Consultancy</a></li>
+        <li><a href="#" style="color: #FF6F61; text-decoration: none;">Home</a></li>
+        <li><a href="#" style="color: #FF6F61; text-decoration: none;">Games</a></li>
+        <li><a href="#" style="color: #FF6F61; text-decoration: none;">Research</a></li>
+        <li><a href="#" style="color: #FF6F61; text-decoration: none;">Contact Us</a></li>
+        <li><a href="#" style="color: #FF6F61; text-decoration: none;">Ux Consultancy</a></li>
       </ul>
     </div>
 
     <div style="flex: 1 1 30%; margin: 20px 0;">
       <h3 style="margin-bottom: 15px; font-size: 22px; font-weight: 700;">Contact</h3>
-      <p style="font-weight: 500;">Email: <a href="mailto:contact@studiopoetics.com" style="color: #D4A017; text-decoration: none;">contact@studiopoetics.com</a></p>
+      <p style="font-weight: 500;">Email: <a href="mailto:contact@studiopoetics.com" style="color: #FF6F61; text-decoration: none;">contact@studiopoetics.com</a></p>
       <div style="margin-top: 15px;">
-        <a href="#" style="margin: 0 30px; color: #D4A017; font-size: 56px; display: inline-block;"><i class="fab fa-linkedin-in"></i></a>
-        <a href="#" style="margin: 0 30px; color: #D4A017; font-size: 56px; display: inline-block;"><i class="fab fa-twitter"></i></a>
-        <a href="#" style="margin: 0 30px; color: #D4A017; font-size: 56px; display: inline-block;"><i class="fab fa-instagram"></i></a>
+        <a href="#" style="margin: 0 30px; color: #FF6F61; font-size: 56px; display: inline-block;"><i class="fab fa-linkedin-in"></i></a>
+        <a href="#" style="margin: 0 30px; color: #FF6F61; font-size: 56px; display: inline-block;"><i class="fab fa-twitter"></i></a>
+        <a href="#" style="margin: 0 30px; color: #FF6F61; font-size: 56px; display: inline-block;"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
   </div>
