--- a/test_poetics/index.html
+++ b/test_poetics/index.html
@@ -96,8 +96,8 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
     </div>
   </div>
 
-  <div style="border-top: 1px solid #ddd; margin-top: 40px; padding-top: 20px; font-weight: 600;">
-    <p>&copy; 2024 Studio Poetics. All rights reserved. <a href="#" style="color: #D4A017; text-decoration: none;">Privacy Policy</a></p>
+  <div style="border-top: 1px solid #ddd; margin-top: 40px; padding-top: 16px; font-weight: 500;">
+    <p>&copy; 2024 Studio Poetics. All rights reserved. <a href="#" style="color: #FF6F61; text-decoration: none;">Privacy Policy</a></p>
   </div>
 </footer>
 
