--- a/Section_C/Section_C_final_FIXED.html
+++ b/Section_C/Section_C_final_FIXED.html
@@ -487,8 +487,8 @@
 <div class="page active" id="language-page">
 <header>
     <div class="logo-container">
-      <img src="logo.png" alt="Exhibition Logo" class="logo left-logo">
-      <img src="logoh.png" alt="Exhibition Logo Hindi" class="logo right-logo">
+      <img src="./logo.png" alt="Exhibition Logo" class="logo left-logo">
+      <img src="./logoh.png" alt="Exhibition Logo Hindi" class="logo right-logo">
     </div>
     
 <h1>The Travelling Exhibition - Vaccine Injecting Hope | एक भ्रमणशील प्रदर्शनी - वैक्सीन आशा की किरण</h1>
